@@ -1,4 +1,6 @@
 DIST glossy-0.1.tar.bz2 5992162 RMD160 099738d2f41c23a4a7faac76b59e8f360b9a3532 SHA1 1f9c89993357106c48bbb759394f024d0b6d8e91 SHA256 a7dbdf157051855d9455e74c0fec2a756c21fbb3795c8e0f67364e2a4e373839
+DIST glossy-0.2.tar.bz2 6156165 RMD160 8bfdf78b342ee01a82e79a5ad667ca76fc1000d1 SHA1 43844e957719045e44a6779a12da60596e9baaab SHA256 059d772a3094925878a75f82194e11441c26a419e5569ba7b50cd0fe7bd6ca60
 EBUILD glossy-0.1.ebuild 542 RMD160 3d1b8c6fc090cc066b1bae41ae321d0a4cc4b2ee SHA1 969b4bb38677414f8c61cefc6968b1bf33ddc174 SHA256 e6026596c3d40dec40e2990853ae694c7d3c5c2a559ffbe7089077d71af2df73
-MISC ChangeLog 306 RMD160 ffa7c87bb0326adcd66de56285facd45c2375009 SHA1 76fcf98cf2da9c213574037ca8c2aa99d9eb7375 SHA256 a48583ff8f55b535de7d4b8867a8c495285d269dae2c6a0f44e91a8d17c5bc80
+EBUILD glossy-0.2.ebuild 533 RMD160 9a85e7057610d97cb57261b0dfd389087aa73b9a SHA1 eb8091766c81c776d0e8d164a5e1f72345fd3d1d SHA256 b7a1f7e89df71bfdffba0944e90546ffb7b0dcd2acf9fdb19f24cd81f1a4b7ad
+MISC ChangeLog 470 RMD160 3421d6af64ccf0bf302791263c65c242dcc63f64 SHA1 38535b65369a301c8ce91922d05ac6d74afcfe1d SHA256 a965e93bd8a9b05732c4b82fc05ca647cb3aa36c3a1b2500ff9561491d008aad
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
