@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Aug 2008; Victor Enriquez (VQuickSilver) <victor.quicksilver@gmail.com>
+  +glossy-0.2.ebuild:
+  New Ebuild for version 0.2, now with fully glossy progressbar
+
   06 Jul 2008; Víctor Enríquez (VQuickSilver)
   <victor.quicksilver@gmail.com> +glossy-0.1.ebuild, +metadata.xml:
   New Ebuild for bug 230957 thanks to Coldwind,Ken69267 and gentoofan23
